last_error.txt
   Compiling mtt-file-manager v0.1.0 (C:\Users\mtamu\github\MTT-File-Manager-RUST)
warning: unused import: `HashMap`
 --> src\app\state.rs:5:24
  |
5 | use std::collections::{HashMap, HashSet};
  |                        ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::num::NonZeroUsize`
 --> src\app\state.rs:6:5
  |
6 | use std::num::NonZeroUsize;
  |     ^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `NotificationManager`
  --> src\app\state.rs:13:44
   |
13 | use crate::application::{ClipboardManager, NotificationManager};
   |                                            ^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::ui::cache::CacheManager`
  --> src\app\state.rs:19:5
   |
19 | use crate::ui::cache::CacheManager;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `eframe::egui`
 --> src\app\init.rs:1:5
  |
1 | use eframe::egui;
  |     ^^^^^^^^^^^^

warning: unused import: `HashMap`
 --> src\app\init.rs:3:24
  |
3 | use std::collections::{HashMap, HashSet};
  |                        ^^^^^^^

warning: unused import: `crate::ui::cache::CacheManager`
  --> src\app\init.rs:17:5
   |
17 | use crate::ui::cache::CacheManager;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `SyncStatus`
  --> src\app\operations.rs:12:81
   |
12 | use crate::domain::file_entry::{FileEntry, FoldersPosition, SortMode, ViewMode, SyncStatus, IconSize};
   |                                                                                 ^^^^^^^^^^

warning: unused import: `SendMessageW`
  --> src\app\operations.rs:19:60
   |
19 | use windows::Win32::UI::WindowsAndMessaging::{FindWindowW, SendMessageW};
   |                                                            ^^^^^^^^^^^^

warning: unused import: `SortMode`
   --> src\ui\app_impl.rs:322:49
    |
322 |                 use crate::domain::file_entry::{SortMode, ViewMode};
    |                                                 ^^^^^^^^

warning: use of deprecated method `eframe::egui::ScrollArea::id_source`: Renamed id_salt
   --> src\ui\app_impl.rs:461:26
    |
461 |                         .id_source("preview_scroll")
    |                          ^^^^^^^^^
    |
    = note: `#[warn(deprecated)]` on by default

warning: unused variable: `grip_rect`
   --> src\ui\app_impl.rs:881:17
    |
881 |             let grip_rect = egui::Rect::from_min_size(grip_pos, egui::vec2(grip_size, grip_size));
    |                 ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_grip_rect`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `is_renaming`
  --> src\ui\toolbar.rs:43:5
   |
43 |     is_renaming: bool,
   |     ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_is_renaming`

warning: variable does not need to be mutable
   --> src\ui\preview_panel.rs:170:17
    |
170 |             let mut add_detail = |ui: &mut egui::Ui, label: &str, value: String| {
    |                 ----^^^^^^^^^^
    |                 |
    |                 help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: associated items `get_or_load_icon`, `format_media_duration`, `format_bitrate`, and `approximate_bitrate` are never used
    --> src\app\operations.rs:1061:8
     |
  38 | impl ImageViewerApp {
     | ------------------- associated items in this implementation
...
1061 |     fn get_or_load_icon(
     |        ^^^^^^^^^^^^^^^^
...
1175 |     fn format_media_duration(ticks_100ns: u64) -> String {
     |        ^^^^^^^^^^^^^^^^^^^^^
...
1189 |     fn format_bitrate(bps: u32) -> String {
     |        ^^^^^^^^^^^^^^
...
1200 |     fn approximate_bitrate(size_bytes: u64, duration_100ns: u64) -> Option<u32> {
     |        ^^^^^^^^^^^^^^^^^^^
     |
     = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: function `query_subkey_friendly_name` is never used
   --> src\infrastructure\windows\codec_registry.rs:391:4
    |
391 | fn query_subkey_friendly_name(parent_key: HKEY, subkey_name: &str) -> Option<String> {
    |    ^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: function `load_app_icon` is never used
   --> src\ui\app_impl.rs:974:4
    |
974 | fn load_app_icon() -> Option<egui::IconData> {
    |    ^^^^^^^^^^^^^

warning: `mtt-file-manager` (lib) generated 17 warnings (run `cargo fix --lib -p mtt-file-manager` to apply 13 suggestions)
warning: unused import: `std::path::PathBuf`
 --> src\main.rs:3:5
  |
3 | use std::path::PathBuf;
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0308]: mismatched types
   --> src\main.rs:141:13
    |
141 |             Box::new(ImageViewerApp::new(cc))
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Result<Box<dyn App>, Box<...>>`, found `Box<ImageViewerApp>`
    |
    = note: expected enum `Result<Box<dyn App>, Box<(dyn std::error::Error + Send + Sync + 'static)>>`
             found struct `Box<ImageViewerApp>`
help: try wrapping the expression in `Ok`
    |
141 |             Ok(Box::new(ImageViewerApp::new(cc)))
    |             +++                                 +

For more information about this error, try `rustc --explain E0308`.
warning: `mtt-file-manager` (bin "mtt-file-manager") generated 1 warning
error: could not compile `mtt-file-manager` (bin "mtt-file-manager") due to 1 previous error; 1 warning emitted
